<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>challenge_project1</name>
  <version>0.0.0</version>
  <description>Node for the challenge 1 of the ROS project</description>
  <maintainer email="ngatam.thiebaut@ensam.eu">turtle</maintainer>
  <license>Apache-2.0</license>

  <depend>stds_msgs</depend>
  <depend>rclpy</depend>
  <depend>rospy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
